--- a/my_vacancies.html
+++ b/my_vacancies.html
@@ -18,11 +18,18 @@
       <div class="sidebar">
         <div class="sidebar__user"><img class="sidebar__user-img" src="img/icons/user.svg" alt="ООО “ХимСтрой”">
           <div class="sidebar__user-info">
-            <div class="sidebar__user-title">ООО “ХимСтрой”</div>
+            <div class="sidebar__user-title">MyСrane</div>
             <div class="sidebar__user-nav"><a class="sidebar__user-link" href="#!">Профиль</a><a class="sidebar__user-link" href="#!">Выход</a></div>
           </div>
         </div>
-        <div class="btn--block"><a class="btn btn--border" href="#">Заказать услуги</a></div>
+        <div class="btn_blocks_wrapp">
+          <div class="btn--block btn--block_2">
+            <a class="btn btn--border" href="#">Подать объявление</a>
+          </div>
+          <div class="btn--block btn--block_2">
+            <a class="btn btn--border" href="#">Подать вакансию</a>
+          </div>
+        </div>
         <div class="sidebar__nav">
           <div class="sidebar__nav-item sidebar__nav-item-active"><a class="sidebar__nav-link" href="#!"><img class="sidebar__nav-icons" src="img/icons/sidebar/edit.svg" alt="Мои заявки">Мои Заявки</a></div>
           <div class="sidebar__nav-item"><a class="sidebar__nav-link" href="#!"><img class="sidebar__nav-icons" src="img/icons/sidebar/crane.svg" alt="Парк техники и подписки">Парк техники и подписки</a></div>
