--- a/settings.html
+++ b/settings.html
@@ -78,14 +78,16 @@
                       </div>
                     </div>
                   </div>
-                  <div class="input_two_cols">
-                    <div class="left_col">
-                      <div class="yellow_input">
-                        <input type="text" placeholder="+7" />
+                  <div class="tels_sect">
+                    <div class="input_two_cols">
+                      <div class="left_col">
+                        <div class="yellow_input">
+                          <input type="text" placeholder="+7" />
+                        </div>
                       </div>
-                    </div>
-                    <div class="right_col">
-                      <button type="button" class="plus_btn add_tel"></button>
+                      <div class="right_col">
+                        <button type="button" class="plus_btn add_tel"></button>
+                      </div>
                     </div>
                   </div>
                 </div>
