--- a/cabinet_park_subs.html
+++ b/cabinet_park_subs.html
@@ -154,7 +154,7 @@
               </div>
 
               <div class="form--row">
-                <button class="btn btn--submit btn--submit_2" type="submit">Добавить кран</button>
+                <button class="btn btn--submit btn--submit_2" type="submit" id="submitBtn">Добавить кран</button>
               </div>
             </div>
 
