--- a/cabinet_park_subs.html
+++ b/cabinet_park_subs.html
@@ -132,7 +132,7 @@
               <div class="form--row">
                 <div class="input input--medium_1">
                   <label class="input__label">Модель</label>
-                  <input maxlength="17" class="input__elem" type="text" name="carrying" id="inputMask">
+                  <input class="input__elem" type="text" name="carrying" id="inputMask">
                 </div>
                 <div class="input input--medium_2">
                   <label class="input__label">Год выпуска</label>
