--- a/cabinet_park_subs.html
+++ b/cabinet_park_subs.html
@@ -104,9 +104,9 @@
               <div class="input">
                 <label class="input__label">Тип крана</label>
                 <select class="input__elem" name="type-tap" id="selectMask">
-                  <option value="1" data-maxlenght = "17">Автомобильный с телескопической стрелой</option>
-                  <option value="2" data-maxlenght = "7">Гусеничный кран</option>
-                  <option value="3" data-maxlenght = "">Башенный кран</option>
+                  <option value="1" data-maxlenght = "17" data-placeholder = "w1234567891234567">Автомобильный с телескопической стрелой</option>
+                  <option value="2" data-maxlenght = "7" data-placeholder = "123.456">Гусеничный кран</option>
+                  <option value="3" data-maxlenght = "" data-placeholder = "w123456789123456789">Башенный кран</option>
                 </select>
               </div>
 
@@ -136,7 +136,7 @@
                 </div>
                 <div class="input input--medium_2">
                   <label class="input__label">Год выпуска</label>
-                  <input class="input__elem" type="text" name="carrying">
+                  <input class="input__elem" placeholder="2021" type="text" name="carrying">
                 </div>
                 <div class="input_3">
                   <label class="input__label">Файлы</label>
